Specified Dirac spinor definition for q=0

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1734,6 +1734,16 @@ In these expressions, energy and momentum are defined by:
 E & \eqdef & \sqrt{\left( \mp \pt \c^2 \right)^2 + \left( \frac{\h \c}{\a} \q \right)^2} \\
 \p & \eqdef & \frac \h \a \q 
 \end{eqnarray*}
+For the special case of the wave vector $\q = \sv 0$, we take the values:
+$$
+\begin{array}{cccc}
+\dirspin \pt {\sv 0} {1/2} \eqdef \matrix{1 \\ 0 \\ 0 \\ 0} &
+\dirspin \pt {\sv 0} {-1/2} \eqdef \matrix{0 \\ 1 \\ 0 \\ 0} &
+\dirspin {\antiparticle \pt} {\sv 0} {1/2} \eqdef \matrix{0 \\ 0 \\ 0 \\ 1} &
+\dirspin {\antiparticle \pt} {\sv 0} {-1/2} \eqdef \matrix{0 \\ 0 \\ 1 \\ 0}
+\end{array}
+$$
+as a definition for $\mp \pt = 0$, too.
 We extend these definitions periodically to all $\q \in \ILD$ by $\dirspin \pt \q \sp \eqdef \dirspin \pt {\eqp \q} \sp$ and $\dirspin {\antiparticle \pt} \q \sp \eqdef \dirspin {\antiparticle \pt} {\eqp \q} \sp$.
 
 These spinors verify the orthogonality relations:
