--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1279,6 +1279,7 @@ where the spin summations evaluate to:
 \sum_{\sp',\sp,\sp_\photon} \left| \ddirspin \pt {\q - \q_\photon} {\sp'} \gammat 0 \gamvec \dirspin {\antiparticle \pt} {-\q} \sp \ssp \cphotonspin {\q_\photon} {\sp_\photon} \right|^2 = \\
 2 \left( 1 + \frac{( \mp \pt \a \c / \h )^2 + ( \eqp{\q - \q_\photon} \ssp \q_\photon ) ( \q \ssp \q_\photon ) / q_\photon^2}{\Ek \pt {\q - \q_\photon} \Ek {\antiparticle \pt} {-\q} ( \a / \h \c )^2} \right)
 \end{multline*}
+For $\mp \pt = 0$ and in the special cases where $\q = \sv 0$ or $\eqp{\q - \q_\photon} = \sv 0$, they evaluate respectively to $1$ and $2$.
 The numerical coefficients $\kappa^\vac_\pt$ only depend on the masses of the bare particles and are plotted below:
 \begin{center}
 \includegraphics[scale=0.4]{images/graphics/Vacuum_Energy_2.pdf}\\
