--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -298,7 +298,16 @@ Sébastien Fauvel
 \cleardoublepage
 \tableofcontents
 
-\chapter{Introduction}
+\mainmatter
+
+\chapter*{History of this book}
+
+\renewcommand{\epigraphwidth}{8.3cm}
+\epigraph{For one of the most stringent tests of any physical theory is the prediction of its own creation process.}{Sébastien Fauvel,\\\textit{Quantum Ethics}~\cite{Fauvel2013}}
+
+How would Quantum Field Theory look like if we stopped for a while developing it further as if it were the draft of a yet-to-be-discovered Theory of Everything, and just started to reformulate the Standard Model as a mathematically and conceptually coherent physical theory? And what would such a theory tell us about the world and about ourselves, which remains hidden in the ill-defined formulations we've grown up with through the last decades? As I started back in 2010 to reflect on these questions, I didn't have yet a clear vision of what this work would lead me to. I just had the feeling that these very basic questions hadn't been interesting anyone any more for a far too long time, and that we should actually have the means by now, with our understanding of Renormalization, of writing down a well-defined Quantum Field Theory, reasonably accounting for all known experimental data (excepted General Relativity phenomena), which means essentially that it has to be compatible with the Standard Model at known energy scales. I was quite confident that I could find a physically sound regularization of the Standard Model, which I simply wouldn't consider as an approximation, but take as the exact theory itself, the Standard Model being an ill-defined idealization of it. The models used in computer simulations of lattice Quantum Chromodynamics, for instance, would show me the way. Of course, I knew that I wouldn't be able to derive the theory from the usual first principles any more, but given that all the attempts of axiomatic Quantum Field Theory to construct well-defined interacting fields upon these first principles had failed miserably, I thought that maybe they could be misleading in the end. Anyhow, I had never been very fond of the heuristical construction of Quantum Field Theory based on Gauge and Poincaré invariance. Developing the whole mathematical apparatus of Representation Theory to simply derive the expression of spin 1 and spin 1/2 spinors as irreducible unitary representations of the Poincaré group had always seemed far too expensive to me, and Gauge transformations mixing particle fields far too artificial to make up a fundamental symmetry of Nature.
+
+\chapter*{Introduction}
 
 \section*{Interpreting Quantum Field Theory}
 
@@ -327,8 +336,6 @@ The metaphysics of the theory are been sketched in chapter \ref{Metaphysics} and
 The interaction Hamiltonian of Quantum  Electrodynamics is then defined in chapter \ref{Quantum Electrodynamics} and, as an example, the semi-classical cross-section of Coulomb scattering is calculated to the leading order in chapter \ref{Coulomb scattering}.
 
 Finally, some usual mathematical functions, notations and operators are being defined in the appendix.
-
-\mainmatter
 
 \part{Physical world}
 
@@ -1816,6 +1823,8 @@ where we used the shorthand notations $\beta \eqdef \bkn \pt \q$ and $\beta' \eq
 \bibitem{Descartes1637} Descartes, R. (1637). \htmladdnormallink{\textit{Discours de la méthode pour bien conduire sa raison, et chercher la vérité dans les sciences}}{http://www.gutenberg.org/ebooks/13846}. Ian Maire, Leiden (The Netherlands), 1637. \htmladdnormallink{\textit{Discourse on the Method of Rightly Conducting One's Reason and of Seeking Truth in the Sciences}}{http://www.gutenberg.org/ebooks/59}. W. Blackwood and sons, London (United Kingdom), 1870.
 
 \bibitem{Einstein1916} Einstein, A. (1916). \textit{Über die spezielle und die allgemeine Relativitätstheorie}. Vieweg, Braunschweig (Germany), 1917. \htmladdnormallink{\textit{Relativity: The Special and General Theory}}{http://www.gutenberg.org/ebooks/5001}. Methuen \& Co. Ltd., London (United Kingdom), 1920.
+
+\bibitem{Fauvel2013} Fauvel, S. (2010). \htmladdnormallink{\textit{Quantum Ethics: A Spinozist Interpretation of Quantum Field Theory}}{http://www.quantum-ethics.org/}. CreateSpace Independent Publishing Platform, Scotts Valley (California, United States), 2013.
 
 \bibitem{Feynman1964} Feynman, R. (1964). \htmladdnormallink{\textit{The Character of Physical Law: 6. Probability and uncertainty - the quantum mechanical view of nature}}{http://www.youtube.com/watch?v=aAgcqgDc-YM}. Messenger Lectures, Cornell University, Ithaca (New York, United States), 1964. The British Broadcasting Corporation, London (United Kingdom), 1965.
 
