Normalized website URL

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1824,7 +1824,7 @@ where we used the shorthand notations $\beta \eqdef \bkn \pt \q$ and $\beta' \eq
 
 \bibitem{Einstein1916} Einstein, A. (1916). \textit{Über die spezielle und die allgemeine Relativitätstheorie}. Vieweg, Braunschweig (Germany), 1917. \htmladdnormallink{\textit{Relativity: The Special and General Theory}}{http://www.gutenberg.org/ebooks/5001}. Methuen \& Co. Ltd., London (United Kingdom), 1920.
 
-\bibitem{Fauvel2013} Fauvel, S. (2010). \htmladdnormallink{\textit{Quantum Ethics: A Spinozist Interpretation of Quantum Field Theory}}{http://www.quantum-ethics.org/}. CreateSpace Independent Publishing Platform, Scotts Valley (California, United States), 2013.
+\bibitem{Fauvel2013} Fauvel, S. (2010). \htmladdnormallink{\textit{Quantum Ethics: A Spinozist Interpretation of Quantum Field Theory}}{http://quantum-ethics.org/}. CreateSpace Independent Publishing Platform, Scotts Valley (California, United States), 2013.
 
 \bibitem{Feynman1964} Feynman, R. (1964). \htmladdnormallink{\textit{The Character of Physical Law: 6. Probability and uncertainty - the quantum mechanical view of nature}}{http://www.youtube.com/watch?v=aAgcqgDc-YM}. Messenger Lectures, Cornell University, Ithaca (New York, United States), 1964. The British Broadcasting Corporation, London (United Kingdom), 1965.
 
