Added copyright notice

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -269,7 +269,9 @@ of Quantum Field Theory
 
 \null
 \vfill
-\noindent{\small Cover image: Hubble telescope image of the Carina Nebula, 2007.\\
+\noindent{\small Copyright © 2013 Sébastien Fauvel \\
+\\
+Cover image: Hubble telescope image of the Carina Nebula, 2007.\\
 Photograph: NASA, ESA, N. Smith (University of California, Berkeley), and The Hubble Heritage Team (STScI/AURA).}
 
 \cleardoublepage
