Added third paragraph to the 'History of this book'

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -309,6 +309,8 @@ How would Quantum Field Theory look like if we stopped for a while developing it
 
 So I felt free to redefine the Hilbert space of the quantum states without paying much attention to these first principles and focused instead on the mathematical well-definedness of the theory, and in particular of the Schrödinger equation. The most evident way of insuring a well-defined solution at all times is to make the Hilbert space finite dimensional, which has two major physical implications. The most important one is that the physical space itself, too, has to be finite, i.e. to consist in a finite number of points. The simplest way to take this constraint into account is to define space as a finite lattice, like in computer simulations of Quantum Chromodynamics, and to adapt the expression of the Hamiltonian operator of the Standard Model, developed on the momentum basis, by simply using a discrete Fourier transform on the lattice. This formulation of the theory, considered as a fundamental theory and not as a numerical approximation, has evident ontological and cosmological implications. It is interesting to see, for instance, how modern physics addresses thus the atomist polemic of ancient Greece, i.e. the question if matter can be, in principle, indefinitely separated into smaller pieces, or if there are smallest building blocks of matter. The answer of this theory were not only that elementary particles are the smallest, point-like building blocks of matter, but that space itself is constituted of smallest, point-like building blocks, and even of a finite number of them! Incidentally, the void between point-like particles imagined by Greek atomists like Democritus acquires a very different quality, too. There is still a notion of void as the unrealized potentiality of the presence of matter, represented by an unoccupied lattice site, but this site, although it is empty of matter, is still something familiar, identifiable, something we could put a name on. Psychologically, the void loses thus much of the threatening quality of the indiscernible. The empty space that we might tend to imagine between the lattice sites isn't actually part of the material world, it is purely virtual and has no physical relevance.
 
+From a cosmological perspective, the finiteness of space is also a very interesting aspect. It addresses the old question of knowing whether there is something like a frontier of the universe or if the universe is infinite, and it offers a very original answer. According to this theory, the universe is both finite and boundless; it actually has a toroidal structure, which is not of topological nature, but reveals itself at the level of the field dynamics: Wave packets will transit smoothly from one side of the finite lattice to the opposite one without experiencing any discontinuity. So the light we emit, for instance, could come back to us from the opposite direction after having traveled through the whole universe. Yes, if the universe were smaller, maybe you could see the Earth looking at the stars... and the position of the closest images of the Earth in the night sky would give you the direction of the lattice axes, by the way.
+
 [...]
 
 \chapter*{Introduction}
