Made whole section "Wave function" to a "Complements" paragraph

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -453,7 +453,7 @@ and the velocity by $\vk \pt \q \eqdef \bk \pt \q \c$.
 
 \section{Wave function}
 
-\paragraphtitle{Remark} We can associate following wave function components to each one particle state:
+\paragraphtitle{Complements} We can associate following wave function components to each one particle state:
 \begin{equation*}
 \wf \Psi \pt \sp {\sv x} \eqdef (1+2 \N)^{-3/2} \sum_{\q} \FT\Psi(\bQ 1 \pt \q \sp) \exp{\i 2 \pi \frac{\sv x \ssp \q}{\a}}
 \end{equation*}
@@ -464,7 +464,7 @@ Eigenstates of the momentum operator are thus associated with plane waves on $\I
 \end{eqnarray*}
 We define thus an isomorphism between a finite set, indexed on $( \pt,\sp )$, of complementary subspaces of $\Hn 1$, and a finite dimensional subspace of $\mathrm C^\infty\left(\IR^3,\IC\right)$ containing functions of period $(1+2\N)\a$ along each coordinate.
 
-\paragraphtitle{Complements} In that space, the (image of the) momentum operator acts according to:
+In that space, the (image of the) momentum operator acts according to:
 \begin{equation*}
 \Pop \wf \Psi \pt \sp {\sv x} = \frac{\h}{\i 2 \pi} \sv \nabla \wf \Psi \pt \sp {\sv x}
 \end{equation*}
