Fixed notation collision
- Since "\mathrm M_\pt" is already used for the reduced rest masses, used "N_\pt^{max}" instead for the maximum occupation numbers

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -97,7 +97,7 @@
 % Lattice parameters
 \newcommand{\N}{\mathrm N} % Lattice size
 \renewcommand{\a}{\mathrm a} % Lattice step
-\newcommand{\M}[1]{\mathrm M_{#1}} % Maximum occupation number for a given particle type
+\newcommand{\M}[1]{N_{#1}^{max}} % Maximum occupation number for a given particle type
 
 % Lattice notations
 \newcommand{\FL}{\IntRange{-\N}{\N}^3} % Lattice
