--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -311,6 +311,8 @@ So I felt free to redefine the Hilbert space of the quantum states without payin
 
 From a cosmological perspective, the finiteness of space is also a very interesting aspect. It addresses the old question of knowing whether there is something like a frontier of the universe or if the universe is infinite, and it offers a very original answer. According to this theory, the universe is both finite and boundless; it actually has a toroidal structure, which is not of topological nature, but reveals itself at the level of the field dynamics: Wave packets will transit smoothly from one side of the finite lattice to the opposite one without experiencing any discontinuity. So the light we emit, for instance, could come back to us from the opposite direction after having traveled through the whole universe. Yes, if the universe were smaller, maybe you could see the Earth looking at the stars... and the position of the closest images of the Earth in the night sky would give you the direction of the lattice axes, by the way.
 
+The second physical implication of the finite dimension of the Hilbert space is the existence of a maximum occupation number for boson fields. I wondered if there were any good theoretical reason to assume an unbounded number of bosons per field mode, and I actually didn't find any. Of course, the commutation relations usually considered as essential properties of the creation operators would break down when the maximum number of particles is being reached, but these relations, relicts of a heuristical construction of Quantum Field Theory based on the harmonic oscillator model of Quantum Mechanics, are not really necessary to define creation operators. In fact, it is quite straight-forward to define a basis of the Hilbert space on a finite lattice, you just have to take as basis vectors field configurations defined as functions giving the number of particles of each kind at each lattice site. And it isn't more complicated either to define creation operators as adding one particle of a given kind at a given lattice site, as long as a given maximum occupation number hasn't been reached. The normalization factors implied by the commutation relations can then be moved to the spinors, where they actually belong. The situation is quite similar for fermions: If you don't construct the Hilbert space heuristically as a Fock space over the one-particle Hilbert space of Quantum Mechanics, the sign factors implied by the anticommutation of the creation operators can be moved to the spinors too. So in the end, there isn't any qualitative distinction to be made between bosons and fermions; the same creation operators can be used in both cases, differing only in their maximum occupation numbers. In fact, if you don't construct the Hilbert space as a Fock space, but define it directly (or use a Fock space modulo particle labels permutations), there is no Spin-Statistics Theorem classifying particles into bosons and fermions according to their spin any more. This famous theorem relates the integer or half-integer character of the spin to the possible sign change happening to the quantum state when the labels of two particles of the same type are being exchanged. But the notion of exchanging the labels of two particles doesn't actually have any physical meaning, it only makes sense in the Fock space formalism, and is a mere mathematical artifact. I think it is important to realize that the Spin-Statistics Theorem, traditionally considered as one of the greatest insights provided by Special Relativity into Quantum Field Theory, actually doesn't have any profound physical meaning, and doesn't establish, as it is often being stated, a connexion between the geometry of space-time and the collective behavior of particles. It only expresses a property of the ``unphysical'' Fock space formalism, and becomes meaningless as soon as you consider the ``physical'' quantum states modulo particle labels permutations. So the categories of `bosons' and `fermions' are not implied by Special Relativity, as far as their collective behavior is concerned; only the form of the spinors is. Determining experimentally the maximum occupation number for each boson field is still an open question: For ``heavy'' bosons like the Z boson, for instance, I don't think that a lower bound much greater that one can already be established with current experimental data...
+
 [...]
 
 \chapter*{Introduction}
