--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1707,7 +1707,7 @@ This allows us to label the particles of any field $(\pt, \sp)$ present in a pla
 The fermion antisymmetrization operators $\Faop \pt \q \sp$ can be defined conventionally with the help of this standard particle numbering function by their action on the momentum basis:
 \begin{eqnarray*}
 \Faop \pt \q \sp \ket{\bFQ N \pt \q \sp} & \eqdef & (-1)^\sigma \ket{\bFQ N \pt \q \sp} \\
-\sigma & = & \left| \{ i | \q_i <= \q \} \right| \\
+\sigma & = & \left| \{ i | \q_i \leq \q \} \right| \\
 (\q_i) & = & \Pn \pt \sp \left( \bFQ N \pt \q \sp \right)
 \end{eqnarray*}
 These hermitian, unitary operators are always used together with the corresponding creation and annihilation operators for fermion fields. They verify following essential anticommutation properties, where the anticommutation notation $\{\cdot, \cdot\}$ is defined by $\{ \op a, \op b\} \eqdef \op a \op b + \op b \op a$:
