Added further History paragraph

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -315,6 +315,8 @@ From a cosmological perspective, the finiteness of space is also a very interest
 
 The second physical implication of the finite dimension of the Hilbert space is the existence of a maximum occupation number for boson fields. I wondered if there were any good theoretical reason to assume an unbounded number of bosons per field mode, and I actually didn't find any. Of course, the commutation relations usually considered as essential properties of the creation operators would break down when the maximum number of particles is being reached, but these relations, relicts of a heuristical construction of Quantum Field Theory based on the harmonic oscillator model of Quantum Mechanics, are not really necessary to define creation operators. In fact, it is quite straight-forward to define a basis of the Hilbert space on a finite lattice, you just have to take as basis vectors field configurations defined as functions giving the number of particles of each kind at each lattice site. And it isn't more complicated either to define creation operators as adding one particle of a given kind at a given lattice site, as long as a given maximum occupation number hasn't been reached. The normalization factors implied by the commutation relations can then be moved to the spinors, where they actually belong. The situation is quite similar for fermions: If you don't construct the Hilbert space heuristically as a Fock space over the one-particle Hilbert space of Quantum Mechanics, the sign factors implied by the anticommutation of the creation operators can be moved to the spinors too. So in the end, there isn't any qualitative distinction to be made between bosons and fermions; the same creation operators can be used in both cases, differing only in their maximum occupation numbers. In fact, if you don't construct the Hilbert space as a Fock space, but define it directly (or use a Fock space modulo particle labels permutations), there is no Spin-Statistics Theorem classifying particles into bosons and fermions according to their spin any more. This famous theorem relates the integer or half-integer character of the spin to the possible sign change happening to the quantum state when the labels of two particles of the same type are being exchanged. But the notion of exchanging the labels of two particles doesn't actually have any physical meaning, it only makes sense in the Fock space formalism, and is a mere mathematical artifact. I think it is important to realize that the Spin-Statistics Theorem, traditionally considered as one of the greatest insights provided by Special Relativity into Quantum Field Theory, actually doesn't have any profound physical meaning, and doesn't establish, as it is often being stated, a connexion between the geometry of space-time and the collective behavior of particles. It only expresses a property of the ``unphysical'' Fock space formalism, and becomes meaningless as soon as you consider the ``physical'' quantum states modulo particle labels permutations. So the categories of `bosons' and `fermions' are not implied by Special Relativity, as far as their collective behavior is concerned; only the form of the spinors is. Determining experimentally the maximum occupation number for each boson field is still an open question: For ``heavy'' bosons like the Z boson, for instance, I don't think that a lower bound much greater that one can already be established with current experimental data...
 
+Once I had constructed this first well-defined framework for Quantum Field Theory and made a first proof-of-concept by integrating Quantum Electrodynamics, I left the paper draft I had written by that time rest for a while, took care of my new-born son and started reading a book from the Philosophy library of my wife that had been intriguing me for a while: A French translation of Spinoza's \textit{Ethics}. The reading would accompany me through the whole summer of 2011 and make a lasting impression on me. The subtle way Spinoza integrates subjective mental experience into the physical world reminded me of von Neumann's hypothesis that mind could somehow cause the collapse of the quantum state of a system upon measurement, and I realized that, within the well-defined framework I had constructed, we had the possibility for the first time to give a formally very precise definition of what von Neumann had meant. This would provide a precise answer to the measurement problem, and probably the first one that isn't only psychologically motivated, but also constrained by formal consistency. So I started to figure out how to relate subjective mental experience to the state of the material world in quantum physical terms, and re-read Spinoza with this question in mind. Following von Neumann's interpretation, I should relate a mental state to a Hilbert subspace in such a way that the Hilbert space be a direct sum of the subspaces corresponding to each possible mental state. Making the assumption that we have to do with a single, individual mind in this decomposition leads directly to the paradox of Wigner's friend, that is, when several bodies (brains?) are present at once -- and it is the case most of the time, isn't it? --, which one oughts to determine the mental state and trigger the collapse? Escaping this issue requires to describe the mental state collectively, i.e. to specify the number of minds experiencing each possible individual mind state at a time, so that a collective mental state is, basically, described with the same formalism as a field configuration over individual mind states. And exactly as this is the case for particles in particle fields, individual minds are \textit{indistinguishable} at a fundamental level. There is nothing like ``my'' mind or ``your'' mind, each one having its own personal history that could, in principle, be tracked back from birth to death. Pretty much like single particles don't have any individual trajectory in Quantum Physics, single minds don't have any individual history either. As Spinoza would say, we are all thinking together in God; we participate of a single collective mind and don't have any individual existence below this ontological level. This will probably sound crazy to most readers, and it is probably one of the reasons why Spinoza has been excommunicated for heresy in his time. But it is actually an utmost self-consistent point of view, and the only one consistent with Quantum Field Theory so far. I cannot but warmly advise you to take a closer look at \textit{The Ethics}; re-reading Spinoza and seeing how a 17th century heresy meets Quantum Physics is really a very exciting experience. The pantheist thesis of Spinoza fits incredibly well in the world view sustained by Quantum Field Theory; neither your body, enmeshed by quantum entanglement with other ones, nor your mind, indistinguishable from other ones, have any individual existence: Nothing exists but God, aka Nature. This is basically the idea of this book, and given that no other interpretation of Quantum Physics integrates so deeply into the formalism of Quantum Field Theory, this made me think that this book was worth writing it, and I guess it will be a joy for many science philosophers to see that the latest achievements in fundamental physics are leading us back, eventually, from a materialistic to a pantheist philosophy.
+
 [...]
 
 \chapter*{Introduction}
