--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -319,7 +319,7 @@ Once I had constructed this first well-defined framework for Quantum Field Theor
 
 As soon as I had developed this Spinozist model of the mental world (which builds up, together with the material world of quantum fields, the physical world as a whole), I got confronted with the old question of the status of time in Quantum Physics. The controversies on this subject have been summarized very concisely by Wolfgang Pauli in his statement that there cannot be any time observable in Quantum Physics. In the Copenhagen interpretation, indeed, time isn't a property of the quantum system under observation; it isn't being measured quantum physically, but \textit{classically}, and correlated with quantum measurement results. When you measure the fluorescence lifetime of ruby, for instance, you only measure the presence of emitted photons on a quantum physical way, which implies the collapse of the system's quantum state, but you measure the time at which the photodetector gets activated by simultaneously reading a clock in a classical way. That is a very strange feature of the quantum/classical dichotomy of the Copenhagen interpretation, and it leaves one very basic question completely open: There is no way to predict quantum physically \textit{when} the quantum measurement process and the collapse of the quantum state will take place, or even to find out the time distribution of the measurement process in a statistical way. The Copenhagen interpretation only defines the statistical distribution of the possible measurement results assuming a measurement is being performed at a given time, but doesn't tell anything about the conditions under which a quantum measurement will actually happen -- basically because measuring is considered as an act taking place in the classical world, which escapes quantum physical description. The reason why this uncertainty about the time at which a quantum measurement happens doesn't have any consequences on our ability to derive statistical results from the theory was already clear in the 1930's: As von Neumann pointed out, it wouldn't make any statistical difference if the collapse of the quantum state happened upon an interaction of the quantum system with a measurement apparatus, or upon an interaction of the quantum system including measurement apparatus with the observer, or at any stage inbetween. And even if the observer wouldn't read the output of the measurement apparatus, the interaction of the quantum system with it, like any process introducing a strong correlation of its state with the environment, would yield quantum decoherence effects which are practically impossible to tell apart from the effects of an hypothetical collapse, as far as the statistical measurement results are concerned. So we have practically no means of finding out at which stage the collapse is taking place, and addressing this question remains a purely theoretical issue of no practical interest. Nevertheless, it has to be addressed by any theory going beyond the Copenhagen interpretation and trying to describe collapse as a physical process independent of the free will of the observer, which is subsumed in the classical world view. There are lots of so-called spontaneous collapse theories, developed originally by John Bell followed by many others, which generally describe collapse as a dynamical process, yielding \textit{in fine} to the same states as an abrupt orthogonal projection would do. But these models are purely materialistic and don't address the question of describing subjective mental experience in physical terms. The suggestion of von Neumann that mind could cause the collapse of the quantum state, which would get projected to quantum states of the brain corresponding to a definite subjective mental experience, seemed much more promising to me, as I was looking forward to sketching a more comprehensive world view in physics. So I stuck to the rather conservative hypothesis of an abrupt collapse of the quantum state via a random orthogonal projection to one of the Hilbert subspaces corresponding to a given mental state, and I had to define precisely when this process would happen. In doing so, you are totally free as a theoretical physicist, because, as I said before, collapse and quantum decoherence have practically the same signature in statistical measurement results, so that we can never be sure of having observed a collapse or not. I rejected the hypothesis of a continuous collapse, because continuous stochastic processes are only idealizations, so I supposed rather that collapses happen at discrete times. This implies that our mental state evolves discontinuously, although we usually don't notice it. From a phenomenological point of view, this isn't very surprising: Our impression of continuity is based on short-time memory and intentionality, not on the permanence and continuity of our subjective mental experience itself. Even if we had a single, isolated mental experience, it would have the same quality and provide the same sensation of time as a continuous one -- for as the poet says, eternity lies in every moment... The continuity of time only applies at the material level, while the mental world only picks out single ``snapshots'' of the state of the material world, so to say. Determining when these mental experiences take place cannot be achieved by investigating their subjective content alone; only the elusive effects of the simultaneous collapse of the quantum state could indicate this. So for the sake of simplicity, I just assumed a periodic collapse with a given elementary period, in order to have a well-defined model, even if we don't have yet any experimental clues in this respect. Of course, the collapse of the quantum state is not a local process in the sense of Relativity Theory, but Einstein-Podolsky-Rosen experiments have already shown very clearly that this non-locality is really part of Nature. And after all, who would expect mental phenomena to be local? They are not bounded to their material substrate; they don't live in the frame of space, but in another dimension of the physical world, so to say.
 
-[...]
+In the end, the model I'm proposing can be roughly described in very simple terms: A subjective mental state is being experienced collectively while the quantum state is undergoing an elementary unitary evolution, then a new mental state is being randomly moved to as the quantum state gets projected to the corresponding subspace, an so on. It almost sounds trivial to me, so I guess I'm eventually understanding Quantum Physics, at least in this form. This alone would be a revolution in this field of science. But I'm not interested in pretending to have discovered deep truths about ``the inmost force which binds the world'', to speak with Goethe; I just wanted to show that it is possible, and actually quite easy, to give Quantum Field Theory a form and an interpretation which make it a formally and conceptually closed theory, capable of giving a well-defined answer to any question we can ask it -- even if we may eventually find out that it wasn't the right one. This interpretation challenges all existing ones insofar as it is the first time that this degree of conceptual precision and formal well-definedness has been reached, and I hope this will be motivation enough for others to work out alternative interpretations and achieve the sane level of quality -- so that we can finally know what Quantum Theory is actually about...
 
 \chapter*{Introduction}
 
